upgrade search feature

--- a/frame/app_detail.html
+++ b/frame/app_detail.html
@@ -186,7 +186,7 @@
 									{value:{{img_count}}, name:'图片'}, 	
 								],
 								itemStyle: {
-									normal:{ 
+									normttal:{ 
 										label:{ 
 											show: true, 
 											position: 'inside',
