--- a/frame/m_base.html
+++ b/frame/m_base.html
@@ -112,6 +112,8 @@
 						</a>    
 						{% if not request.user.is_anonymous %}
 						<ul class="dropdown-menu dropdown-menu-login" role="menu" aria-labelledby="menu1">
+							<li><a href="{% url 'center:mycenter' %}">个人主页</a></li> 
+							<hr>
 							<li><a href="{% url 'user:portrait' %}">修改头像</a></li> 
 							<hr>
 							<li><a href="{% url 'user:logout' %}">退出&nbsp;&nbsp;&nbsp;<i class="fa fa-sign-out" aria-hidden="true"></i></a></li>
